[package]
name = "interessen_puenktchen_sammler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {version = "0.13", features = ["yaml"]}
lettre = {version = "0.10",default-features = false ,features = ["smtp-transport", "rustls-tls", "hostname", "builder"]}
serde = {version = "1", features = ["derive"]}
